--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -73,10 +73,10 @@ table {
 
 .content-login .row .col-md-7 {
   display: flex;
+  justify-content: center;
 }
 @media screen and (max-width: 1200px) {
   .content-login .row .col-md-7 {
-    margin-top: 100px;
     width: 100%;
   }
 }
