--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -81,8 +81,8 @@ table {
     .row{
         .col-md-7{
             display: flex;
+            justify-content: center;
             @media screen and (max-width: 1200px) {
-                margin-top: 100px;
                 width:100%;
             }
         }
