--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -265,82 +265,133 @@ table {
     }
 }
 .content-top-menu{
-    width: 86.5%;
-    height: 70px;
-    border-bottom: 1px solid #EFF0F2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 25px;
-    padding-left: 25px;
-    float: right;
-    .menu-mobile{
-        visibility: hidden;
-    }
-    @media screen and (max-width:1440px) {
-        width: 81.9%;
-    }
-    @media screen and (max-width: 1200px){
-        width: 100%;
-        .menu-mobile{
-            visibility: inherit;
-        }
-    }
-    ul{
-        li{
-            a{
-                font-family: "IBM Plex Sans", sans-serif;
-                color: #1A1823;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: normal;
-                text-decoration: none;
-                display: flex;
-                align-items: center;
-                img{
-                    margin-right: 5px;
+    width:100%;
+    height: auto;
+    padding: 15px 0;
+    background-image: url(../images/bg-top.png);
+    background-size: cover;
+    .container{
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        ul{
+            li{
+                a{
+                    font-family: "IBM Plex Sans", sans-serif;
+                    color: #1A1823;
+                    font-size: 14px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: normal;
+                    text-decoration: none;
+                    display: flex;
+                    align-items: center;
+                    img{
+                        margin-right: 5px;
+                    }
+                }
+            }
+            .menu-usuario{
+                &:hover{
+                    .sub-menu{
+                        display: block;
+                    }
+                }
+            }
+            .sub-menu{
+                display: none;
+                position: absolute;
+                right: 10px;
+                width: 127px;
+                height: auto;
+                border: 1px solid #EFF0F2;
+                text-align: right;
+                padding: 5px;
+                background-color: $branco;
+                li{
+                    cursor: pointer;
+                    a{
+                        display: flex;
+                        justify-content: flex-end;
+                        margin-right: 10px;
+                    }
                 }
             }
         }
-        .menu-usuario{
-            &:hover{
-                .sub-menu{
+        .group-menu-logo{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            .menu-mobile{
+                display: none;
+                font-size: 33px;
+                color: #fff;
+            }
+            @media screen and (max-width:769px) {
+                width: 100%;
+                display: flex;
+                justify-content: flex-start;
+                .menu-mobile{
                     display: block;
                 }
             }
         }
-        .sub-menu{
-            display: none;
-            position: absolute;
-            right: 10px;
-            width: 127px;
-            height: auto;
-            border: 1px solid #EFF0F2;
-            text-align: right;
-            padding: 5px;
-            background-color: $branco;
-            li{
-                cursor: pointer;
+        .menu-logo{
+            img{
+                height: 70px;
+                @media screen and (max-width: 769px) {
+                    height: 30px;
+                    margin: 0 15px;
+                }
+            }
+        }
+        .menu-top-logado{
+            div{
+                color: #fff;
+                margin: 0 15px;
+                display: flex;
+                align-items: center;
+                p{
+                    font-size: 18px;
+                }
                 a{
-                    display: flex;
-                    justify-content: flex-end;
-                    margin-right: 10px;
+                    font-size: 18px;
+                    color: #fff;
+                    font-weight: 600;
+                    text-decoration: none;
+                }
+                span{
+                    font-size: 15px;
+                }
+                svg{
+                    fill: #fff;
+                    margin-right: 5px;
+                    @media screen and (max-width:769px) {
+                        width: 30px;
+                    }
+                }
+                .current{
+                    color: #DA5300;
+                    fill: #DA5300
+                }
+            }
+            @media screen and (max-width: 769px) {
+                .mobile-none{
+                    display: none;
                 }
             }
         }
     }
 }
 .content-lateral-menu{
-    width: 13.5%;
+    width: 100%;
     height: 47.8vw;
     border-right: 1px solid $cinzaclaro;
     float: left;
     background: #fff;
-    @media screen and (max-width:1440px) {
-        width: 18%;
-    }
-    @media screen and (max-width: 1200px){
+    @media screen and (max-width: 769px){
         width: 260px;
         height: 1000px;
         border-right: 1px solid #EFF0F2;
@@ -349,11 +400,6 @@ table {
         display: none;
         z-index: 1;
         background: #fff;
-        margin-top: 70px;
-    }
-    .menu-logo{
-        margin-top: 16px;
-        margin-left: 20px;
     }
     .menu{
         span{
