--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -347,6 +347,7 @@ table {
 }
 .content-top-menu .container .menu-top-logado div p {
   font-size: 18px;
+  font-weight: 600;
 }
 .content-top-menu .container .menu-top-logado div a {
   font-size: 18px;
@@ -378,7 +379,7 @@ table {
 
 .content-lateral-menu {
   width: 100%;
-  height: 47.8vw;
+  height: auto;
   border-right: 1px solid #EFF0F2;
   float: left;
   background: #fff;
@@ -409,31 +410,60 @@ table {
   display: block;
 }
 .content-lateral-menu .menu ul li {
-  width: 100%;
+  width: 200px;
+  float: left;
   list-style: none;
+  margin: 10px;
 }
 .content-lateral-menu .menu ul li a {
-  color: #959396;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  border-radius: 3px;
-  padding: 14px 19px;
-  width: 100%;
+  color: #EF592A;
+  font-weight: 700;
+  background-color: #FFF;
+  border: 3px solid #EF592A;
+  border-radius: 100px;
+  text-align: center;
+  padding: 14px;
   display: block;
   text-decoration: none;
-  border-left: 3px solid #FFFFFF;
+  font-size: 14px;
+}
+@media screen and (max-width: 769px) {
+  .content-lateral-menu .menu ul li a {
+    border: 0;
+    text-align: left;
+  }
 }
 .content-lateral-menu .menu ul li a:hover {
   color: #EF592A;
-  background-color: #FFF4F0;
-  border-left: 3px solid #EF592A;
+  border: 3px solid #EF592A;
+  border-radius: 100px;
+  text-align: center;
+  font-weight: 800px;
 }
 .content-lateral-menu .menu ul li .current {
   color: #EF592A;
-  background-color: #FFF4F0;
-  border-left: 3px solid #EF592A;
+  background-color: #FFF;
+  border: 3px solid #EF592A;
+  border-radius: 100px;
+  text-align: center;
+  font-weight: 800px;
+}
+@media screen and (max-width: 769px) {
+  .content-lateral-menu .menu ul li .current {
+    border-left: solid #EF592A;
+    border-top: 0;
+    border-bottom: 0;
+    border-right: 0;
+    border-radius: 0;
+    text-align: left;
+    background-color: #EFF0F2;
+  }
+}
+@media screen and (max-width: 769px) {
+  .content-lateral-menu .menu ul li {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .content-tabelas {
