--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -355,6 +355,7 @@ table {
                 align-items: center;
                 p{
                     font-size: 18px;
+                    font-weight: 600;
                 }
                 a{
                     font-size: 18px;
@@ -387,7 +388,7 @@ table {
 }
 .content-lateral-menu{
     width: 100%;
-    height: 47.8vw;
+    height:auto;
     border-right: 1px solid $cinzaclaro;
     float: left;
     background: #fff;
@@ -415,30 +416,53 @@ table {
         padding: 10px;
         ul{
             li{
-                width: 100%;
+                width: 200px;
+                float: left;
                 list-style: none;
+                margin: 10px;
                 a{
-                    color: $cinzaescuro;
-                    font-size: 15px;
-                    font-style: normal;
-                    font-weight: 500;
-                    line-height: normal;
-                    border-radius: 3px;
-                    padding: 14px 19px;
-                    width: 100%;
+                    color: #EF592A;
+                    font-weight: 700;
+                    background-color: #FFF;
+                    border: 3px solid #EF592A;
+                    border-radius: 100px;
+                    text-align: center;
+                    padding: 14px;
                     display: block;
                     text-decoration: none;
-                    border-left: 3px solid $branco;
+                    font-size: 14px;
+                    @media screen and (max-width:769px) {
+                        border: 0;
+                        text-align: left;
+                    }
                     &:hover{
-                        color: $laranja;
-                        background-color: #FFF4F0;
-                        border-left: 3px solid $laranja;
+                        color: #EF592A;
+                        border: 3px solid #EF592A;
+                        border-radius: 100px;
+                        text-align: center;
+                        font-weight: 800px;
                     }
                 }
                 .current{
-                    color: $laranja;
-                    background-color: #FFF4F0;
-                    border-left: 3px solid $laranja;
+                    color: #EF592A;
+                    background-color: #FFF;
+                    border: 3px solid #EF592A;
+                    border-radius: 100px;
+                    text-align: center;
+                    font-weight: 800px;
+                    @media screen and (max-width:769px) {
+                        border-left:solid #EF592A;
+                        border-top: 0;
+                        border-bottom: 0;
+                        border-right: 0;
+                        border-radius: 0;
+                        text-align: left;
+                        background-color: $cinzaclaro;
+                    }
+                }
+                @media screen and (max-width:769px) {
+                    width: 100%;
+                    margin: 0;
                 }
             }
         }
