--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -349,6 +351,11 @@ table {
   font-size: 18px;
   font-weight: 600;
 }
+@media screen and (max-width: 769px) {
+  .content-top-menu .container .menu-top-logado div p {
+    font-size: 16px;
+  }
+}
 .content-top-menu .container .menu-top-logado div a {
   font-size: 18px;
   color: #fff;
@@ -410,7 +417,7 @@ table {
   display: block;
 }
 .content-lateral-menu .menu ul li {
-  width: 200px;
+  width: 18.2%;
   float: left;
   list-style: none;
   margin: 10px;
@@ -434,8 +441,9 @@ table {
   }
 }
 .content-lateral-menu .menu ul li a:hover {
-  color: #EF592A;
+  color: #FFFFFF;
   border: 3px solid #EF592A;
+  background-color: #EF592A;
   border-radius: 100px;
   text-align: center;
   font-weight: 800px;
@@ -448,16 +456,19 @@ table {
     border-right: 0;
     border-radius: 0;
     text-align: left;
-    background-color: #EFF0F2;
+    background-color: #376cd7;
   }
 }
 .content-lateral-menu .menu ul li .current {
-  color: #EF592A;
-  background-color: #FFF;
+  color: #FFFFFF;
+  background-color: #EF592A;
   border: 3px solid #EF592A;
   border-radius: 100px;
   text-align: center;
   font-weight: 800px;
+}
+.content-lateral-menu .menu ul li .current:hover {
+  color: #FFFFFF;
 }
 @media screen and (max-width: 769px) {
   .content-lateral-menu .menu ul li .current {
@@ -467,7 +478,7 @@ table {
     border-right: 0;
     border-radius: 0;
     text-align: left;
-    background-color: #EFF0F2;
+    background-color: #376cd7;
   }
 }
 @media screen and (max-width: 769px) {
@@ -839,6 +850,95 @@ input[switch=dark]:checked + label {
   border: 1px solid #707070;
   color: #000000;
   background-color: #FFFFFF;
+}
+
+.content-cadastro {
+  padding: 30px 15px;
+  clear: both;
+}
+.content-cadastro h2 {
+  text-align: center;
+  font-size: 22px;
+  margin: 20px;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+}
+.content-cadastro form {
+  padding: 20px;
+  border: 1px solid #cdcdcd;
+  border-radius: 15px;
+}
+
+.tit-mi-conta {
+  clear: both;
+  background-color: #0567D4;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 20px;
+  font-family: "Ubuntu", serif;
+  display: flex;
+  color: #fff;
+  font-weight: 600;
+  font-size: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.tit-mi-conta svg {
+  margin-right: 5px;
+  width: 30px;
+}
+
+.content-dados-conta {
+  font-size: 20px;
+  color: #000000;
+  font-weight: 700;
+}
+@media screen and (max-width: 769px) {
+  .content-dados-conta {
+    padding: 0px;
+    display: grid;
+    font-size: 14px;
+  }
+}
+.content-dados-conta .row {
+  border: 1px solid #0567D4;
+  border-radius: 15px;
+  margin: 5px;
+}
+.content-dados-conta .row .col-md-6 {
+  padding: 15px;
+  display: grid;
+}
+.content-dados-conta .row .col-md-6 .foto {
+  width: 360px;
+  height: 360px;
+  background-image: url(../images/foto.png);
+  background-size: cover;
+  margin: 0 auto;
+}
+@media screen and (max-width: 769px) {
+  .content-dados-conta .row .col-md-6 .foto {
+    width: 100%;
+    height: 300px;
+  }
+}
+@media screen and (max-width: 769px) {
+  .content-dados-conta .row .col-md-6 {
+    width: 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+.content-dados-conta i {
+  margin-right: 10px;
+}
+.content-dados-conta .d-flex {
+  margin: 15px;
+}
+.content-dados-conta .d-flex div {
+  color: #EF592A;
+  margin-right: 15px;
 }
 
 /*# sourceMappingURL=app.css.map */
