--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,9 +28,11 @@ footer, header, hgroup, menu, nav, section {
 //Fontes
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
- 
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"); 
+
 $fontInter:"Inter", sans-serif;
- 
+$fontUbuntu: "Ubuntu", serif;
 $branco: #FFFFFF;
 $cinza: #D6D6D6;
 $cinzaescuro:#959396;
@@ -356,6 +358,9 @@ table {
                 p{
                     font-size: 18px;
                     font-weight: 600;
+                    @media screen and (max-width:769px){
+                        font-size: 16px;
+                    }
                 }
                 a{
                     font-size: 18px;
@@ -416,7 +421,7 @@ table {
         padding: 10px;
         ul{
             li{
-                width: 200px;
+                width: 18.2%;
                 float: left;
                 list-style: none;
                 margin: 10px;
@@ -436,8 +441,9 @@ table {
                         text-align: left;
                     }
                     &:hover{
-                        color: #EF592A;
+                        color: #FFFFFF;
                         border: 3px solid #EF592A;
+                        background-color: #EF592A;
                         border-radius: 100px;
                         text-align: center;
                         font-weight: 800px;
@@ -448,17 +454,19 @@ table {
                             border-right: 0;
                             border-radius: 0;
                             text-align: left;
-                            background-color: $cinzaclaro;
+                            background-color: #376cd7;
                         }
                     }
                 }
                 .current{
-                    color: #EF592A;
-                    background-color: #FFF;
+                    color: #FFFFFF;
+                    background-color: #EF592A;
                     border: 3px solid #EF592A;
                     border-radius: 100px;
                     text-align: center;
-                    font-weight: 800px;
+                    font-weight: 800px;&:hover{
+                        color: #FFFFFF;
+                    }
                     @media screen and (max-width:769px) {
                         border-left:solid #EF592A;
                         border-top: 0;
@@ -466,7 +474,7 @@ table {
                         border-right: 0;
                         border-radius: 0;
                         text-align: left;
-                        background-color: $cinzaclaro;
+                        background-color: #376cd7;
                     }
                 }
                 @media screen and (max-width:769px) {
@@ -739,80 +747,80 @@ input[switch] {
     &:checked + label {
       background-color: $azul;
     }
-  }
-  
-  input[switch]:checked + label {
+}
+
+input[switch]:checked + label {
     background-color: #EF592A;
     &:before {
-      color: $branco;
-      content: attr(data-on-label);
-      right: auto;
-      left: 3px;
+        color: $branco;
+        content: attr(data-on-label);
+        right: auto;
+        left: 3px;
     }
-  
+
     &:after {
-      left: 33px;
-      background-color: $branco;
+        left: 33px;
+        background-color: $branco;
     }
-  }
-  
-  input[switch="bool"] + label {
+}
+
+input[switch="bool"] + label {
     background-color: $vermelho;
-  }
-  input[switch="bool"] + label:before,input[switch="bool"]:checked + label:before,
-  input[switch="default"]:checked + label:before{
+}
+input[switch="bool"] + label:before,input[switch="bool"]:checked + label:before,
+input[switch="default"]:checked + label:before{
     color: $branco;
-  }
-  
-  input[switch="bool"]:checked + label {
+}
+
+input[switch="bool"]:checked + label {
     background-color: $preto;
-  }
-  
-  input[switch="default"]:checked + label {
-    background-color: $branco;
-  }
-  
-  input[switch="primary"]:checked + label {
+}
+
+input[switch="default"]:checked + label {
+background-color: $branco;
+}
+
+input[switch="primary"]:checked + label {
     background-color: $laranja;
-  }
-  
-  input[switch="success"]:checked + label {
+}
+
+input[switch="success"]:checked + label {
     background-color: $preto;
-  }
-  
-  input[switch="info"]:checked + label {
+}
+
+input[switch="info"]:checked + label {
     background-color: $azul;
-  }
-  
-  input[switch="warning"]:checked + label {
+}
+
+input[switch="warning"]:checked + label {
     background-color: $amarelo;
-  }
-  
-  input[switch="danger"]:checked + label {
+}
+
+input[switch="danger"]:checked + label {
     background-color: $vermelho;
-  }
-  
-  input[switch="dark"]:checked + label {
+}
+
+input[switch="dark"]:checked + label {
     background-color: $preto;
-  }
-  
-  .square-switch{
+}
+
+.square-switch{
     margin-right: 7px;
     input[switch]+label, input[switch]+label:after{
-      border-radius: 4px;
+        border-radius: 4px;
     }
-  }
-  .editar{
+}
+.editar{
     cursor: pointer;
-  }
-  .apagar{
+}
+.apagar{
     cursor: pointer;
-  }
-  .border-zero{
+}
+.border-zero{
     border: 0;
     background-color: transparent;
-  }
-  .page-link{
+}
+.page-link{
     color: $preto;
     border: 1px solid #707070;
     font-size: 12.6px!important;
@@ -821,5 +829,84 @@ input[switch] {
         color: $preto;
         background-color: $branco;
     }
-  }
-  
+}
+.content-cadastro{
+    padding: 30px 15px;
+    clear: both;
+    h2{
+        text-align: center;
+        font-size: 22px;
+        margin: 20px;
+        font-family: $fontInter;
+        font-weight: 600;
+    }
+    form{
+        padding: 20px;
+        border: 1px solid #cdcdcd;
+        border-radius: 15px;
+    }
+}
+.tit-mi-conta{
+    clear: both;
+    background-color: #0567D4;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 20px;
+    font-family: $fontUbuntu;
+    display: flex;
+    color: #fff;
+    font-weight: 600;
+    font-size: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    svg{
+        margin-right: 5px;
+        width: 30px;
+    }
+}
+.content-dados-conta{
+    font-size: 20px;
+    color: $preto;
+    font-weight: 700;
+    @media screen and (max-width: 769px) {
+        padding: 0px;
+        display: grid;
+        font-size: 14px;
+    }
+    .row{
+        border: 1px solid #0567D4;
+        border-radius: 15px;
+        margin: 5px;
+        .col-md-6{
+            padding: 15px;
+            display: grid;
+            .foto{
+                width: 360px;
+                height: 360px;
+                background-image: url(../images/foto.png);
+                background-size: cover;
+                margin: 0 auto;
+                @media screen and (max-width: 769px) {
+                    width: 100%;
+                    height: 300px;
+                }
+            }
+            @media screen and (max-width: 769px) {
+                width: 100%;
+                flex: 0 0 100%;
+                max-width: 100%;
+            }
+        }
+    }
+    i{
+        margin-right: 10px;
+    }
+    .d-flex{
+        margin: 15px;
+        div{
+            color: $laranja;
+            margin-right: 15px;
+        }
+    }
+}
