--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -436,6 +436,9 @@ table {
                     display: block;
                     text-decoration: none;
                     font-size: 14px;
+                    @media screen and (max-width:1024px) {
+                        font-size: 10px;
+                    }
                     @media screen and (max-width:769px) {
                         border: 0;
                         text-align: left;
@@ -477,6 +480,9 @@ table {
                         background-color: #376cd7;
                     }
                 }
+                @media screen and (max-width:1024px) {
+                    width: 17.2%;
+                }
                 @media screen and (max-width:769px) {
                     width: 100%;
                     margin: 0;
@@ -486,7 +492,6 @@ table {
     }
 }
 .content-tabelas{
-    padding: 35px 20px;
     .card{
         border-color: #EFF0F2;
         .card-header{
@@ -498,99 +503,6 @@ table {
             font-weight: 500;
             line-height: normal;
             border-color: #EFF0F2;
-        }
-    }
-    .content-table-menus{
-        form{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            @media screen and (max-width:769px) {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                flex-direction: column;
-            }
-            .form-check{
-                display: grid;
-                @media screen and (max-width:1200px) {
-                    display: flex;
-                    padding: 0;
-                    align-items: center;
-                }
-                span{
-                    color: #000;
-                    font-size: 14px;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: normal;
-                    margin-bottom: 10px;
-                    @media screen and (max-width:1200px) {
-                        margin-bottom: 0px;
-                        margin-right: 5px;
-                    }
-                }
-            }
-            .form-group{
-                padding-top: 15px;
-                input{
-                    width: 180px;
-                    height: 29px;
-                    border-radius: 4px;
-                    border: 0.5px solid #CED4DA;
-                    background: #FFF;
-                    margin-top: 10px;
-                    color: #1A1823;
-                    font-size: 12.6px;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: normal;
-                }
-                span{
-                    color: #000;
-                    font-size: 14px;
-                    font-style: normal;
-                    font-weight: 400;
-                    line-height: normal;
-                }
-                margin-right: 20px;
-                @media screen and (max-width:1200px) {
-                    width: 250px;
-                }
-                @media screen and (max-width:769px) {
-                    margin-right: 0px;
-                    width: 100%;
-                    input{
-                        width:100%;
-                    }
-                }
-            }
-            .button-adicionar{
-                background-color: $laranja;
-                color: $branco;
-                font-size: 14px;
-                font-weight: 500;
-                width: 110px;
-                height: 39px;
-                margin-top: 25px;
-                margin-left: 163px;
-                @media screen and (max-width:769px) {
-                    margin-left: 0;
-                }
-            }
-            .button-enviar{
-                background-color: $laranja;
-                color: $branco;
-                font-size: 14px;
-                font-weight: 500;
-                width: 110px;
-                height: 39px;
-                margin-top: 25px;
-                margin-left: 200px;
-                @media screen and (max-width:769px) {
-                    margin-left: 0;
-                }
-            }
         }
     }
     .content-table{
@@ -878,6 +790,7 @@ input[switch="dark"]:checked + label {
         border: 1px solid #0567D4;
         border-radius: 15px;
         margin: 5px;
+        display: flex;
         .col-md-6{
             padding: 15px;
             display: grid;
@@ -888,8 +801,8 @@ input[switch="dark"]:checked + label {
                 background-size: cover;
                 margin: 0 auto;
                 @media screen and (max-width: 769px) {
-                    width: 100%;
-                    height: 300px;
+                    width: 140px;
+                    height: 140px;
                 }
             }
             @media screen and (max-width: 769px) {
@@ -897,6 +810,20 @@ input[switch="dark"]:checked + label {
                 flex: 0 0 100%;
                 max-width: 100%;
             }
+        }
+        @media screen and (max-width:769px) {
+            .order-2{
+                order: 1!important;
+            }
+            .order-1{
+                order: 2!important;
+            }
+        }
+        .order-2{
+            order: 2;
+        }
+        .order-1{
+            order: 1;
         }
     }
     i{
@@ -909,4 +836,8 @@ input[switch="dark"]:checked + label {
             margin-right: 15px;
         }
     }
+}
+.content-edit{
+  clear: both;
+  padding: 25px;
 }
