--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -229,11 +229,6 @@ table {
   background-color: #FFFFFF;
   color: #EF592A;
 }
-@media screen and (max-width: 1440px) {
-  .content-login .card .botoes-cadastro {
-    width: 100%;
-  }
-}
 .content-login .card .link-esqueci {
   text-align: center;
   padding: 15px;
@@ -394,7 +389,8 @@ table {
 @media screen and (max-width: 769px) {
   .content-lateral-menu {
     width: 260px;
-    height: 1000px;
+    height: 588px;
+    overflow: auto;
     border-right: 1px solid #EFF0F2;
     float: left;
     position: absolute;
@@ -417,7 +413,8 @@ table {
   display: block;
 }
 .content-lateral-menu .menu ul li {
-  width: 18.2%;
+  width: 31%;
+  height: 48px;
   float: left;
   list-style: none;
   margin: 10px;
@@ -813,39 +810,12 @@ input[switch=dark]:checked + label {
   padding: 15px;
   display: grid;
 }
-.content-dados-conta .row .col-md-6 .foto {
-  width: 360px;
-  height: 360px;
-  background-image: url(../images/foto.png);
-  background-size: cover;
-  margin: 0 auto;
-}
-@media screen and (max-width: 769px) {
-  .content-dados-conta .row .col-md-6 .foto {
-    width: 140px;
-    height: 140px;
-  }
-}
 @media screen and (max-width: 769px) {
   .content-dados-conta .row .col-md-6 {
     width: 100%;
     flex: 0 0 100%;
     max-width: 100%;
   }
-}
-@media screen and (max-width: 769px) {
-  .content-dados-conta .row .order-2 {
-    order: 1 !important;
-  }
-  .content-dados-conta .row .order-1 {
-    order: 2 !important;
-  }
-}
-.content-dados-conta .row .order-2 {
-  order: 2;
-}
-.content-dados-conta .row .order-1 {
-  order: 1;
 }
 .content-dados-conta i {
   margin-right: 10px;
@@ -861,6 +831,24 @@ input[switch=dark]:checked + label {
 .content-edit {
   clear: both;
   padding: 25px;
+}
+
+footer {
+  clear: both;
+  width: 100%;
+  height: 100px;
+  margin-top: 50px;
+  background-image: url(../images/footer-bg.svg);
+}
+footer .content-rodape {
+  display: flex;
+  justify-content: center;
+  height: 100px;
+  align-items: center;
+}
+footer .content-rodape p {
+  color: #fff;
+  text-align: center;
 }
 
 /*# sourceMappingURL=app.css.map */
