--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -321,7 +321,7 @@ table {
   .content-top-menu .container .group-menu-logo {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
   .content-top-menu .container .group-menu-logo .menu-mobile {
     display: block;
@@ -389,14 +389,14 @@ table {
 @media screen and (max-width: 769px) {
   .content-lateral-menu {
     width: 100%;
-    height: 300px;
+    height: 297px;
     overflow: auto;
-    border-right: 1px solid #EFF0F2;
     float: left;
     position: relative;
     display: none;
     z-index: 1;
-    background: #fff;
+    background: #1167a0;
+    margin-bottom: 20px;
   }
 }
 .content-lateral-menu .menu {
@@ -440,6 +440,7 @@ table {
   .content-lateral-menu .menu ul li a {
     border: 0;
     text-align: left;
+    border-radius: 0;
   }
 }
 .content-lateral-menu .menu ul li a:hover {
@@ -495,6 +496,9 @@ table {
   }
 }
 
+.content-tabelas {
+  clear: both;
+}
 .content-tabelas .card {
   border-color: #EFF0F2;
 }
@@ -563,6 +567,11 @@ table {
   float: left;
   font-size: 14px;
 }
+@media screen and (max-width: 769px) {
+  .content-tabelas .content-table div.dataTables_wrapper div.dataTables_info {
+    float: none;
+  }
+}
 .content-tabelas .content-table .page-item.active .page-link {
   z-index: 1;
   color: #fff;
@@ -610,6 +619,11 @@ table {
     max-width: 100%;
     width: 100%;
     flex: 100%;
+  }
+}
+@media screen and (max-width: 769px) {
+  .content-tabelas {
+    padding: 35px 0px;
   }
 }
 
@@ -849,6 +863,15 @@ footer .content-rodape {
 footer .content-rodape p {
   color: #fff;
   text-align: center;
+}
+
+@media screen and (max-width: 769px) {
+  div.dataTables_wrapper div.dataTables_paginate ul.pagination {
+    margin: 15px 0;
+    white-space: nowrap;
+    justify-content: center;
+    display: flex;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
