--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -332,7 +332,7 @@ table {
             @media screen and (max-width:769px) {
                 width: 100%;
                 display: flex;
-                justify-content: flex-start;
+                justify-content: space-between;
                 .menu-mobile{
                     display: block;
                 }
@@ -397,14 +397,14 @@ table {
     background: #fff;
     @media screen and (max-width: 769px){
         width: 100%;
-        height: 300px;
+        height: 297px;
         overflow: auto;
-        border-right: 1px solid #EFF0F2;
         float: left;
         position: relative;
         display: none;
         z-index: 1;
-        background: #fff;
+        background: $azul;
+        margin-bottom: 20px;
     }
     .menu{
         span{
@@ -442,6 +442,7 @@ table {
                     @media screen and (max-width:769px) {
                         border: 0;
                         text-align: left;
+                        border-radius: 0;
                     }
                     &:hover{
                         color: #FFFFFF;
@@ -492,6 +493,7 @@ table {
     }
 }
 .content-tabelas{
+    clear: both;
     .card{
         border-color: #EFF0F2;
         .card-header{
@@ -556,6 +558,9 @@ table {
         div.dataTables_wrapper div.dataTables_info {
             float: left;
             font-size: 14px;
+            @media screen and (max-width:769px) {
+                float: none;
+            }
         }
         .page-item.active .page-link {
             z-index: 1;
@@ -604,6 +609,9 @@ table {
             width: 100%;
             flex: 100%;
         }
+    }
+    @media screen and (max-width:769px) {
+        padding: 35px 0px;
     }
 }
 
@@ -831,5 +839,13 @@ footer{
             color: #fff;
             text-align: center;
         }
+    }
+}
+div.dataTables_wrapper div.dataTables_paginate ul.pagination {
+    @media screen and (max-width:769px) {
+        margin: 15px 0;
+        white-space: nowrap;
+        justify-content: center;
+        display: flex;
     }
 }
