--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -349,6 +349,10 @@ table {
 @media screen and (max-width: 769px) {
   .content-top-menu .container .menu-top-logado div p {
     font-size: 16px;
+    width: 120px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 .content-top-menu .container .menu-top-logado div a {
@@ -395,7 +399,9 @@ table {
     position: relative;
     display: none;
     z-index: 1;
-    background: #1167a0;
+    background-image: url(../images/bg-top.png);
+    background-repeat: repeat;
+    background-size: cover;
     margin-bottom: 20px;
   }
 }
@@ -459,7 +465,9 @@ table {
     border-right: 0;
     border-radius: 0;
     text-align: left;
-    background-color: #376cd7;
+    background-image: url(../images/bg-top.png);
+    background-repeat: repeat;
+    background-size: cover;
   }
 }
 .content-lateral-menu .menu ul li .current {
@@ -481,7 +489,9 @@ table {
     border-right: 0;
     border-radius: 0;
     text-align: left;
-    background-color: #376cd7;
+    background-image: url(../images/bg-top.png);
+    background-repeat: repeat;
+    background-size: cover;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -831,6 +841,9 @@ input[switch=dark]:checked + label {
     max-width: 100%;
   }
 }
+.content-dados-conta .row .col-md-6 .foto img {
+  max-height: 430px;
+}
 .content-dados-conta i {
   margin-right: 10px;
 }
@@ -840,6 +853,15 @@ input[switch=dark]:checked + label {
 .content-dados-conta .d-flex div {
   color: #EF592A;
   margin-right: 2px;
+}
+@media screen and (max-width: 769px) {
+  .content-dados-conta .d-flex {
+    flex-direction: column;
+    margin: 15px 0px;
+  }
+  .content-dados-conta .d-flex div {
+    margin-bottom: 15px;
+  }
 }
 
 .content-edit {
@@ -871,6 +893,12 @@ footer .content-rodape p {
     white-space: nowrap;
     justify-content: center;
     display: flex;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .foto-btn {
+    width: 100%;
   }
 }
 
