--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -820,6 +820,9 @@ input[switch="dark"]:checked + label {
             .foto{
                 img{
                     max-height: 430px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
                 }
             }
         }
