--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -686,7 +686,7 @@ input[switch] + label:after {
   transition: all 0.1s ease-in-out;
 }
 input[switch]:checked + label {
-  background-color: #1167a0;
+  background-color: #007bff;
 }
 
 input[switch]:checked + label {
@@ -729,7 +729,7 @@ input[switch=success]:checked + label {
 }
 
 input[switch=info]:checked + label {
-  background-color: #1167a0;
+  background-color: #007bff;
 }
 
 input[switch=warning]:checked + label {
@@ -880,6 +880,8 @@ footer {
   height: 100px;
   margin-top: 50px;
   background-image: url(../images/footer-bg.svg);
+  position: absolute;
+  border: 0;
 }
 footer .content-rodape {
   display: flex;
@@ -905,6 +907,33 @@ footer .content-rodape p {
   .foto-btn {
     width: 100%;
   }
+}
+
+.card .card-header {
+  background-image: url(../images/bg-top.png);
+  background-position: center;
+  background-size: cover;
+  color: #FFFFFF !important;
+  font-weight: 700;
+  font-size: 20px;
+}
+.card .card-body label {
+  margin-bottom: 5px;
+}
+
+.dt-buttons .dt-button {
+  background-color: #007bff !important;
+  color: #FFFFFF !important;
+  border: 0px !important;
+  border-radius: 5px !important;
+  box-shadow: none !important;
+}
+
+.dados h3 {
+  background: #EF592A;
+  padding: 15px;
+  color: #FFFFFF;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=app.css.map */
