Feat Vendas criação do cadastro de vendas por usuário e relação com tabela de tours

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -936,4 +936,8 @@ footer .content-rodape p {
   font-weight: 700;
 }
 
+table.dataTable > tbody > tr.child ul.dtr-details {
+  width: 100%;
+}
+
 /*# sourceMappingURL=app.css.map */
