--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -913,3 +913,7 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
         font-weight: 700;
     }
 }
+
+table.dataTable>tbody>tr.child ul.dtr-details{
+    width: 100%;
+}
