Feat Vendas criação do cadastro de vendas por usuário e relação com tabela de tours

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -916,3 +916,15 @@ div.dataTables_wrapper div.dataTables_paginate ul.pagination {
 table.dataTable>tbody>tr.child ul.dtr-details{
     width: 100%;
 }
+#tabela-vendas{
+    .sorting_1{
+        @media screen and (max-width:500px){
+            min-width: 260px;
+        }
+    }
+    .id_venda{
+        @media screen and (max-width:500px){
+            min-width: 260px;
+        }
+    }
+}
