--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -939,4 +939,15 @@ table.dataTable > tbody > tr.child ul.dtr-details {
   width: 100%;
 }
 
+@media screen and (max-width: 500px) {
+  #tabela-vendas .sorting_1 {
+    min-width: 260px;
+  }
+}
+@media screen and (max-width: 500px) {
+  #tabela-vendas .id_venda {
+    min-width: 260px;
+  }
+}
+
 /*# sourceMappingURL=app.css.map */
