Feat Vendas criação do cadastro de vendas por usuário e relação com tabela de tours

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1109,3 +1109,9 @@ th {
         }
     }
 }
+.danger-row {
+    td{
+        background-color: #cd3939 !important; 
+        color: #fff;
+    }
+}
