--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1122,4 +1122,9 @@ th {
   }
 }
 
+.danger-row td {
+  background-color: #cd3939 !important;
+  color: #fff;
+}
+
 /*# sourceMappingURL=app.css.map */
