Feat Vendas criação do cadastro de vendas por usuário e relação com tabela de tours

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1127,4 +1127,25 @@ th {
   color: #fff;
 }
 
+.modal-voucher {
+  max-width: 615px;
+  height: 900px;
+  margin: 0 auto;
+  background-image: url(../images/voucher_bg.png);
+  background-size: cover;
+  padding: 25px;
+}
+.modal-voucher p {
+  font-size: 18px;
+}
+.modal-voucher .voucher {
+  display: grid;
+  align-content: space-between;
+  height: 730px;
+}
+.modal-voucher .modal-header {
+  border: 0;
+  padding: 35px 15px;
+}
+
 /*# sourceMappingURL=app.css.map */
